# marker-coverage-Harry-Cohen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
marker-coverage/: main.cpp
src/: ImageProc.cpp  ImageProc.hpp  main.cpp
test/: test.cpp  test.hpp
